theme updates, now has better colors and uses scss

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,13 +4,11 @@
 }
 
 body {
-	/*font-family: sans-serif ;*/
-	/*background: #110000 ;*/
-	/*color: #ccc ;*/
   font-family: Roboto Slab, Georgia, Serif;
 	color: #ebdbb2;
+	background: var(--primary-bg-color);
 	line-height: 1.2;
-	font-size: 18pt;
+	font-size: 1em;
 	padding: 0px 120px 0px 120px;
   margin: 0px;
 	max-width:100%;
@@ -24,6 +22,15 @@ main {
 
 img {
 	max-width: 100% ;
+}
+
+code {
+	font-family: monospace;
+	background: green;
+}
+
+a {
+	color: var(--primary-color);
 }
 
 header h1 {
