make iframe fit the page

--- a/layouts/shortcodes/invidious.html
+++ b/layouts/shortcodes/invidious.html
@@ -1,5 +1,5 @@
 <div class='embed-container'>
- _ <iframe src='https://invidious.lysle.org/embed/{{ index .Params 0 }}'
+ _ <iframe id='invidous-embed' src='https://invidious.lysle.org/embed/{{ index .Params 0 }}'
 	 frameborder='0' allowfullscreen>
   _</iframe>
 </div>
