updated theme, added shortcodes

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -26,7 +26,7 @@ img {
 
 code {
 	font-family: monospace;
-	background: green;
+	background: orange;
 }
 
 a {
@@ -34,7 +34,7 @@ a {
 }
 
 header h1 {
-	text-align: center ;
+	text-align: left ;
 }
 
 footer {
@@ -62,9 +62,4 @@ footer {
 }
 #nextart,#prevart {
 	max-width: 33% ;
-}
-
-#invidous-embed {
-	width: 100% ;
-	height: 100% ;
 }
