--- a/layouts/shortcodes/hidvid.html
+++ b/layouts/shortcodes/hidvid.html
@@ -1,10 +1,13 @@
 <details>
-    <summary>Click to reveal video.</summary>
-<iframe src="{{ index .Params 0 }}"
-        loading="lazy"
-        sandbox="allow-same-origin allow-scripts allow-popups"
-        allowfullscreen frameborder="0"
-        class="embvid"
-        title="Embedded Video">
-</iframe>
+  <summary>Click to reveal video.</summary>
+  <iframe
+    src="{{ index .Params 0 }}"
+    loading="lazy"
+    sandbox="allow-same-origin allow-scripts allow-popups"
+    allowfullscreen
+    frameborder="0"
+    class="embvid"
+    title="Embedded Video"
+  >
+  </iframe>
 </details>
