--- a/layouts/shortcodes/invidious.html
+++ b/layouts/shortcodes/invidious.html
@@ -1,5 +1,11 @@
-<div class='embed-container'>
-	<iframe class='invidous-embed' src='https://invidious.lysle.org/embed/{{ index .Params 0 }}'
-	 frameborder='0' allowfullscreen height='450' width='100%'>
-	</iframe>
+<div class="embed-container">
+  <iframe
+    class="invidous-embed"
+    src="https://invidious.lysle.org/embed/{{ index .Params 0 }}"
+    frameborder="0"
+    allowfullscreen
+    height="450"
+    width="100%"
+  >
+  </iframe>
 </div>
