better flexbox handling

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,3 @@
-/* LAYOUT */
-
 :root {
   --primary-color: #cc6666;
   --primary-bg-color: #1b1b23;
@@ -36,44 +34,19 @@ a:hover {
 /* NAVIGATION */
 
 .site-nav {
-  display: flex;
 }
 
 .site-nav a {
-  display: block;
-  padding: 1rem;
+  padding: auto 0.5rem;
 }
 
-.site-nav .logo {
+a.title {
   font-weight: bold;
-  padding-left: 0;
 }
 
 .main-menu {
-  display: flex;
   list-style: none;
-  margin: 0;
   padding: 0;
-}
-
-@media screen and (max-width: 48rem) {
-  .site-nav,
-  .main-menu {
-    flex-direction: column;
-  }
-
-  .site-nav a {
-    padding: 0.5rem;
-    padding-left: 0;
-  }
-}
-
-/* LISTS */
-
-.post-snippet {
-  margin-bottom: 1rem;
-}
-
-.post-snippet h3 {
-  margin-bottom: 0.25rem;
+  display: flex;
+  gap: 1rem;
 }
