--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,9 +1,11 @@
 <header class="site-header">
   <nav class="site-nav">
-    <a class="logo" href="{{ .Site.BaseURL }}">
-      {{ .Site.Title }}
-    </a>
     <ul class="main-menu">
+      <li>
+        <a class="title" href="{{ .Site.BaseURL }}">
+          {{ .Site.Title }}
+        </a>
+      </li>
       {{ range.Site.Menus.main }}
         <li>
           <a href="{{ .URL }}">{{ .Name }}</a>
