--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,16 +9,19 @@ body {
   font-size: 0.875rem;
   line-height: 1.5;
   font-family: monospace;
-  max-width: 45rem;
-  padding: 1rem;
+  max-width: 800px;
+  min-height: 600;
+  margin: 40px auto;
+  padding: 0 10px;
   margin: 0 auto;
   background: 1b1b23;
+  border-style: dotted;
+  border-color: 555555;
 }
 
 a {
   color: var(--primary-color);
 }
-
 a:link {
   text-decoration: none;
 }
