more post metadata

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -10,5 +10,13 @@
     {{ partial "header.html" . }}
     {{ block "main" . }}{{ end }}
     {{ partial "footer.html" . }}
+    <a href="/index.xml">
+      <img
+        src="/rss.svg"
+        style="max-height:1.5em"
+        alt="RSS Feed"
+        title="Subscribe via RSS for updates."
+      >
+    </a>
   </body>
 </html>
