--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header class="site-header">
+<header>
   <nav class="site-nav">
     <ul class="main-menu">
       <li>
@@ -7,7 +7,7 @@
         </a>
       </li>
       {{ range.Site.Menus.main }}
-        <li>
+        <li class="menu-element">
           <a href="{{ .URL }}">{{ .Name }}</a>
         </li>
       {{ end }}
