--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,8 +15,6 @@ body {
   padding: 0 10px;
   margin: 0 auto;
   background: 1b1b23;
-  border-style: dotted;
-  border-color: 555555;
 }
 
 a {
@@ -42,19 +40,57 @@ a:hover {
   padding: auto 0.5rem;
 }
 
+.menu-element {
+  font-size: 1rem;
+  font-weight: bold;
+  line-height: 1rem;
+}
+
 a.title {
   font-weight: bold;
+  line-height: 1rem;
 }
 
 .main-menu {
   list-style: none;
   padding: 0;
   display: flex;
+  align-items: center;
   gap: 1rem;
+  font-size: 2rem;
 }
 
 .post-date {
   font-weight: bold;
   font-size: 0.875rem;
   line-height: 0.5;
+}
+
+.infobox-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  margin: 20px;
+}
+
+.infobox {
+  background-color: #f9f9f9;
+  padding: 15px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
+  width: 100%;
+}
+
+.infobox h3 {
+  margin-top: 0;
+  font-size: 1.5em;
+  color: #333;
+}
+
+.infobox p {
+  margin: 5px 0;
+  color: #666;
 }
