--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,25 +69,24 @@ a.title {
 .infobox-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  flex-wrap: wrap;
+  max-height: 1000px;
   gap: 20px;
-  margin: 20px;
 }
 
 .infobox {
-  background-color: #f9f9f9;
-  padding: 15px;
+  /* padding: 15px; */
   border: 1px solid #ddd;
   border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s;
-  width: 100%;
+  border-color: var(--primary-color);
+  border-width: 2px;
+  border-radius: 0.375rem;
 }
 
 .infobox h3 {
   margin-top: 0;
-  font-size: 1.5em;
-  color: #333;
+  padding: 0.5rem 1rem;
+  background-color: var(--primary-color);
 }
 
 .infobox p {
