--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,9 +2,9 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/style.css" type="text/css" media="all">
-    {{ if .Param "math" }}
+    {{- if .Param "math" }}
       {{ partialCached "math.html" . }}
-    {{ end }}
+    {{- end }}
   </head>
   <body>
     {{ partial "header.html" . }}
