--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html lang="{{ .Site.Language }}">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
