added a template for quick replies

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,5 +4,7 @@
     {{ partial "post-header.html" . }}
     {{ .Content }}
     {{ partial "taglist.html" . }}
+    <br>
+    {{ partial "email-me.html" . }}
   </main>
 {{ end }}
