link to tag page

--- a/layouts/partials/taglist.html
+++ b/layouts/partials/taglist.html
@@ -2,7 +2,7 @@
   <span class="tags">
     Tags:
     {{ range . }}
-      #<a href="">{{ . }}</a>
+      #<a href="{{ "/tags/" | relURL }}{{ . | urlize }}">{{ . }}</a>
     {{ end }}
   </span>
 {{- end -}}
