--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   <main>
     {{ .Content }}
-    {{ range (where .Site.RegularPages "Type" "in" (slice "posts")).GroupByDate "2006" }}
+    {{ range (where .Pages "Type" "in" (slice "posts")).GroupByDate "2006" }}
       <h2>{{ .Key }}</h2>
       <ul>
         {{ range .Pages }}
